# resmon

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
.kanban/done/: 01-setup-cmake-structure.md  02-add-imgui-glfw-deps.md  03-create-basic-window.md  04-setup-project-layout.md  05-define-metrics-structs.md  06-define-backend-interfaces.md  07-define-alert-config.md  08-impl-linux-cpu-usage.md  09-impl-linux-cpu-temp.md  10-impl-linux-ram.md  11-impl-linux-nvidia-gpu.md  12-impl-linux-amd-gpu.md  13-impl-linux-intel-gpu.md  14-setup-imgui-theme.md  15-impl-cpu-widget.md  16-impl-gpu-widget.md  17-impl-ram-widget.md  18-impl-main-window-layout.md  19-impl-threshold-config-ui.md  20-impl-threshold-checker.md  21-impl-visual-alerts.md  28-impl-macos-cpu.md  29-impl-macos-ram.md  30-impl-macos-gpu.md
.kanban/todo/: 22-impl-linux-notifications.md  23-impl-windows-cpu.md  24-impl-windows-ram.md  25-impl-windows-nvidia-gpu.md  26-impl-windows-amd-intel-gpu.md  27-impl-windows-notifications.md  31-impl-macos-notifications.md  32-add-cross-platform-ci.md  33-optimize-performance.md  34-write-documentation.md  35-add-install-packaging.md
src/: main.cpp
src/alerts/: alert_manager.cpp  alert_manager.h
src/backend/linux/: cpu_linux.cpp  cpu_linux.h  gpu_amd.cpp  gpu_amd.h  gpu_intel.cpp  gpu_intel.h  gpu_nvidia.cpp  gpu_nvidia.h  linux_backend.cpp  linux_backend.h  ram_linux.cpp  ram_linux.h
src/backend/macos/: cpu_macos.cpp  cpu_macos.h  gpu_macos.cpp  gpu_macos.h  macos_backend.cpp  macos_backend.h  platform_factory.cpp  ram_macos.cpp  ram_macos.h
src/core/: alerts.h  backend.h  metrics.h
